--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap.min.css')
+    link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap-theme.min.css')
+    script(src='javascripts/jquery.min.js')
+    script(src='javascripts/bootstrap/bootstrap.min.js')
   body
     block content
