--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-  - var test = "vivi is handsome"
   h1= title
-  h2= test
   p Welcome to #{title}
+    a(href='/login')  Login here
