--- a/views/login/login.jade
+++ b/views/login/login.jade
@@ -1,14 +1,18 @@
 extends ../layout
 
+
 block content
-  div.row
-    div.col-sm-8
-      div.panel
+  .row
+    .col-sm-8
+      .panel
         form
-          div.form-group
+          .form-group
             label 用户名
-            input.form-control
-          div.form-group
+            input.form-control(name='username')
+          .form-group
             label 密码
-            input.form-control(type='password')
-          button.btn.btn-default(type='submit') 登陆
+            input.form-control(type='password' name='password')
+          button.btn.btn-default#login(type='submit') 登陆
+
+
+  script(src='javascripts/login/login.js')
