--- a/views/login/login-head.jade
+++ b/views/login/login-head.jade
@@ -5,9 +5,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap.min.css')
     link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap-theme.min.css')
-  body
-  body
-  body
+    script(src='javascripts/jquery/jquery.min.js')
+    script(src='javascripts/bootstrap/bootstrap.min.js')
+    script(src='javascripts/login/login.js')
+
+body
     block content
-    script(src='main.js')
-    script(src='common.js')
