add jade require

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,14 @@
-extends layout
-
-block content
-  #navbar
-  #content
+doctype html
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap.min.css')
+    link(rel="stylesheet" href='stylesheets/bootstrap/css/bootstrap-theme.min.css')
+  body
+  body
+  body
+    block content
+    #content
+    script(src='common.js')
+    script(src='main.js')
